--- a/VillageDefence/Views/MainWindow.axaml
+++ b/VillageDefence/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         xmlns:views="clr-namespace:VillageDefence.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="VillageDefence.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/Village.ico"
         Title="VillageDefence">
         <views:MainView />
 </Window>
