--- a/VillageDefence/VillageStyles.axaml
+++ b/VillageDefence/VillageStyles.axaml
@@ -18,10 +18,30 @@
       <Setter Property="VerticalAlignment" Value="Center"/>
       <Setter Property="FontSize" Value="12"/>
     </Style>
-    <Style Selector="Button.Main">
-      <Setter Property="Margin" Value="5"/>
+    <Style Selector="Button.Building:pointerover">
+    </Style>
+    <Style Selector="Button.Army">
+      <Setter Property="Background" Value="BurlyWood"/>
+      <Setter Property="Height" Value="90"/>
+      <Setter Property="Width" Value="90"/>
       <Setter Property="HorizontalAlignment" Value="Center"/>
       <Setter Property="VerticalAlignment" Value="Center"/>
+      <Setter Property="FontSize" Value="12"/>
+    </Style>
+    <Style Selector="Button.Main">
+      <Setter Property="Margin" Value="2"/>
+      <Setter Property="Width" Value="70"/>
+      <Setter Property="HorizontalAlignment" Value="Center"/>
+      <Setter Property="HorizontalContentAlignment" Value="Center"/>
+      <Setter Property="VerticalAlignment" Value="Center"/>
+      <Setter Property="VerticalContentAlignment" Value="Center"/>  
+    </Style>
+    <Style Selector="Button.Control">
+      <Setter Property="Width" Value="100"/>
+      <Setter Property="HorizontalAlignment" Value="Center"/>
+      <Setter Property="HorizontalContentAlignment" Value="Center"/>
+      <Setter Property="VerticalAlignment" Value="Center"/>
+      <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
     <Style Selector="Label.stats">
       <Setter Property="Background" Value="AliceBlue"/>
@@ -33,7 +53,17 @@
       <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
     <Style Selector="Label.River">
-      <Setter Property="Background" Value="Cyan"/>
+      <Setter Property="Background" Value="AliceBlue"/>
       <Setter Property="HorizontalAlignment" Value="Stretch"/>
+      <Style.Animations>
+        <Animation IterationCount="INFINITE" Duration="0:0:3">
+          <KeyFrame Cue="0%">
+            <Setter Property="Opacity" Value="0.5"/>
+          </KeyFrame>
+          <KeyFrame Cue="100%">
+            <Setter Property="Opacity" Value="1.0"/>
+          </KeyFrame>
+        </Animation>
+      </Style.Animations>
     </Style>
 </Styles>
